testing overflowx on mobile to try to fix side gap

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 *, *:before, *:after {
